fix axis kabel overflow

--- a/src/components/analysis/analysis.css
+++ b/src/components/analysis/analysis.css
@@ -205,4 +205,5 @@
 
 p {
     padding-left: 0;
+    white-space: nowrap;
 }
